# obs-streamable-auto-upload

./: Cargo.toml  README.md
src/: lib.rs  main.rs
