[package]
name = "streamable-uploader"
version = "0.1.0"
authors = ["SK <dev.umisk@gmail.com>"]
edition = "2018"
description = "streamable-uploader"
keywords = ["streamable"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "uploader"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.0", features = ["multipart", "blocking"] }
clap = "3.0.0-beta.2"
rpassword = "5.0"
dirs = "3.0.1"
